# python-project-50

./: .gitignore  Makefile  README.md  gendiff.py  make_diff.py  pyproject.toml  result.txt  setup.cfg
.github/workflows/: project-test.yml
gendiff/: __init__.py  arg_parse.py  comparer.py  engine.py  make_diff.py  parser.py
gendiff/formatters/: formatter.py  get_json.py  get_plain.py  get_stylish.py
gendiff/scripts/: gendiff.py  get_diff.py  make_diff.py  stylish.py
tests/: test_gendiff.py
tests/fixtures/: file1_recursive.yaml  file2_recursive.yaml  file3.yaml  output.json  result.json
