[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet project 2"
authors = ["Mirdalan <mirdalan.p@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^5.0.4"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
coverage = "^6.5.0"
pyyaml = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.engine:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
